--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,10 @@
     <p>Click here to be directed to the dashboard describing the entire day's data</p>
   <h1><a href="{% url 'hrchart' %}">Chart</a></h1>
     <p>Click here to be directed a chart</p>
-  <h1><a href="{% url 'syncdata' %}">Sync Data</a></h1>
+  <h1><a href="{% url 'syncpage' %}">Sync Data</a></h1>
   <p>Click here to sync data</p></h1>
+  <h1><a href="{% url 'api-data' %}">Chart Data</a></h1>
+  <p>Click here to view jsondata</p></h1>
   
     
 {%endblock%}
