--- a/templates/chartselect.html
+++ b/templates/chartselect.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {%block breadcrumb %}
-<li class="breadcrumb-item">SyncDataPage</li>
+<li class="breadcrumb-item">ChartSelect</li>
 {%endblock%}
 
 {% block content %}
