--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <p>Click here to be directed to the dashboard describing the most recently synced data</p>
   <h1><a href="{% url 'day' %}">Today's Data</a></h1>
     <p>Click here to be directed to the dashboard describing the entire day's data</p>
-  <h1><a href="{% url 'hrchart' %}">Chart</a></h1>
+  <h1><a href="{% url 'chartselect' %}">Chart</a></h1>
     <p>Click here to be directed a chart</p>
   <h1><a href="{% url 'syncpage' %}">Sync Data</a></h1>
   <p>Click here to sync data</p></h1>
