--- a/templates/recent.html
+++ b/templates/recent.html
@@ -24,7 +24,7 @@
         <tr>
           <td>{{stud.student_name}}</td>
           <td>{{stud.avg_hr}}</td>
-          <td>{{stud.rec_sync}}</td>
+          <td>Need to import from Syncing</td>
           <td>{{stud.times_str_red}}</td>
           <td>{{stud.time_rec_str_red}}</td>
           <td>{{stud.str_step_cor}}</td>
