--- a/static/css/404.css
+++ b/static/css/404.css
@@ -1,3 +1,7 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 body {
   padding: 0;
@@ -41,6 +45,7 @@ body {
   display: inline-block;
   width: 120px;
   height: 120px;
+  background-image: url("/static/img/emoji.png");
   background-size: cover;
   -webkit-transform: scale(1.4);
       -ms-transform: scale(1.4);
