--- a/templates/single_chartselect.html
+++ b/templates/single_chartselect.html
@@ -6,9 +6,23 @@
 {%endblock%}
 
 {% block content %}
-<form method="post" novalidate>
+<form method="post" novalidate autocomplete="off">
   {% csrf_token %}
   {% include 'base/form.html' %}
   <button type="submit" class="btn btn-success">Post</button>
 </form>
+{% endblock %}
+
+{% block javascript %}
+//<script>
+$("#id_start_time").datetimepicker({
+  timepicker: true, 
+  datepicker: true, 
+  
+});
+$("#id_end_time").datetimepicker({
+  timepicker: true, 
+  datepicker: true
+});
+
 {% endblock %}
