Completely fixed Multi and Single Chart

--- a/templates/base/chart_functions.html
+++ b/templates/base/chart_functions.html
@@ -118,8 +118,8 @@ function multiChart(time1, label1, hr1, time2, label2, hr2){
     for (i=0; i<time2.length; i++ ){
         minusdaytime2.push(minusDay(time2[i]));
     }
-    console.log(time1);
-    console.log(minusdaytime2);
+    // console.log(time1);
+    // console.log(minusdaytime2);
     var time1data = makeData(time1, hr1);
     var time2data = makeData(minusdaytime2, hr2)
     var finaldatestr = finaldate(time1[0]);
