--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
     <p>Click here to be directed a chart of multiple student's data</p>
   <h1><a href="{% url 'syncpage' %}">Sync Data</a></h1>
     <p>Click here to sync data</p></h1>
-  <h1><a href="{% url 'api-data' %}">Chart Data</a></h1>
+  <h1><a href="{% url 'api-data' %}?datatype=hour">Chart Data</a></h1>
     <p>Click here to view jsondata</p></h1>
   
     
