--- a/templates/syncsuccess.html
+++ b/templates/syncsuccess.html
@@ -6,5 +6,6 @@
 
 {% block content %}
 <h1>Synced!</h1>
+<p>The last entry was at {{ synctime }} for {{ name }}</p>
 <a href="{% url 'home' %}">Return Home</a>
 {% endblock %}
